# HZip

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  testscript.py
include/: BitIO.h  HuffmanDecoder.h  HuffmanEncoder.h  HuffmanNode.h  HuffmanTree.h  Utils.h
src/: BitIO.cpp  HuffmanDecoder.cpp  HuffmanEncoder.cpp  HuffmanTree.cpp  Utils.cpp  main.cpp
test/: testbench.sh
